# simulator

./: .gitignore  CMakeLists.txt  Hmatrix.m  InitRov.m  LICENSE  README.md  Reuler.m  SimulatorLibrary.slx  SimulatorLibrary.slx.r2015b  create_plugin.sh  package.xml  simple_ROV_plugin.cc  skew.m
.SimulinkProject/: ProjectData.type.Info.xml
ROS_dynamics/: CMakeLists.txt
ROS_dynamics/config/: rov.yaml
ROS_dynamics/src/: dynamics.cpp  dynamics.h  simulator.cpp  simulator.h  simulator_node.cpp
Simulink/: Simulator.slx  Simulator.slx.r2015b
Simulink/doc/: simulator.tex
Simulink/slprj/_jitprj/: jitEngineAccessInfo.mat  sUpaBHYtKMCIbrM6C4JskKG.l  sUpaBHYtKMCIbrM6C4JskKG.mat  sdELKyfIQIU0BjxME1WImGG.l  sqAtFjPcjY4J0buIDg4SKqB.l  sqAtFjPcjY4J0buIDg4SKqB.mat  suPrQ6H8ubzuMXkhDxKTzS.l
Simulink/slprj/_sfprj/EMLReport/: sqAtFjPcjY4J0buIDg4SKqB.mat  suPrQ6H8ubzuMXkhDxKTzS.mat
Simulink/slprj/_sfprj/Simulator/SimulatorLibrary/sfun/info/: binfo.mat
Simulink/slprj/_sfprj/precompile/: autoInferAccessInfo.mat
gazebo_plugin/: CMakeLists.txt  package.xml  rov_plugin.cc
include/: mounted_rov_plugin.hh  rov_plugin.hh
launch/: mounted_rov.launch  rov.launch  simple_ROV.launch
model/manipulator_arm/: model.config  model.sdf
model/manipulator_arm/meshes/: manipulator_arm.dae
model/mounted_rov/: model.config  model.sdf
model/net/: model.config  model.sdf
model/plugins/mounted_rov/: CMakeLists.txt  mounted_rov_plugin.cc
model/plugins/rov/: CMakeLists.txt  rov_plugin.cc
model/pool_floor/: model.config  model.sdf
model/pool_floor/materials/scripts/: pool_floor.material
model/rov/: model.config  model.sdf
plugins/: mounted_rov_plugin.cc
rov_description/: CMakeLists.txt  package.xml
rov_gazebo/: CMakeLists.txt  package.xml
rov_gazebo/launch/: rov.launch
rov_gazebo/plugins/: rov_plugin.cpp
rov_gazebo/worlds/: rov.world
rov_simulator/: CMakeLists.txt  package.xml
rov_simulator/include/rov_simulator/: dynamics.h  simulator.h
rov_simulator/launch/: simulator.launch
rov_simulator/src/: dynamics.cpp  dynamics.h  simulator.cpp  simulator.h  simulator_node.cpp
slprj/_jitprj/: sdELKyfIQIU0BjxME1WImGG.mat  suPrQ6H8ubzuMXkhDxKTzS.mat
slprj/_sfprj/EMLReport/: emlReportAccessInfo.mat  sUpaBHYtKMCIbrM6C4JskKG.mat  sdELKyfIQIU0BjxME1WImGG.mat
slprj/_sfprj/Simulator/_self/sfun/info/: binfo.mat
slprj/_sfprj/precompile/: TVARfD0tMntQbDWexc65pE.mat  dlnYlmkT9pz30qWvHB2JJD.mat  jbmgZmGP5nfVFvK35xJdE.mat  z4t8INYYsREvNH7L5K4Cx.mat
src/: mounted_rov_plugin.cc  rov_plugin.cc  simple_rov_transport.cpp
worlds/: mounted_rov.world  rov.world  simple_ROV.world
