<?xml version="1.0"?>
<package>
  <name>simulator</name>
  <version>0.0.0</version>
  <description>The simple_ROV_gazebo package</description>

  <maintainer email="ole@stivert.otterholm">ole</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>vortex_msgs</build_depend>

  <export>
    <gazebo_ros
      gazebo_plugin_path="${prefix}/build/"
      gazebo_model_path="${prefix}/model/" />
  </export>
</package>
