<?xml version="1.0"?>
<package>
  <name>rov_gazebo</name>
  <version>0.0.0</version>
  <description>The rov_gazebo package</description>

  <maintainer email="vegardkamsvaag@gmail.com">vegard</maintainer>

  <license>MIT</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>gazebo_ros</build_depend>7
  <build_depend>roscpp</build_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <gazebo_ros plugin_path="${prefix}/lib" gazebo_media_path="${prefix}"/>
  </export>
</package>
